docs: POST/DEL answers

--- a/static/open-api-specification.yaml
+++ b/static/open-api-specification.yaml
@@ -523,7 +523,6 @@ paths:
           $ref: '#/components/responses/Forbidden'
         404:
           $ref: '#/components/responses/NotFound'
-
     put:
       summary: Update a question of a quizz and its propositions
       operationId: putQuestionHandler
@@ -569,6 +568,57 @@ paths:
         404:
           $ref: '#/components/responses/NotFound'
 
+  /quizzes/{quiz_id}/questions/{question_id}/answer:
+    parameters:
+      - $ref: '#/components/parameters/quizIdParam'
+      - $ref: '#/components/parameters/questionIdParam'
+    delete:
+      summary: Delete an existing answer
+      operationId: deleteAnswerHandler
+      tags:
+        - authenticated
+        - questions
+        - answers
+      security:
+        - XApiKeyAuth: []
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/responses/ObjectAnswer'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+
+  /quizzes/{quiz_id}/questions/{question_id}/answer/{proposition_id}:
+    parameters:
+      - $ref: '#/components/parameters/quizIdParam'
+      - $ref: '#/components/parameters/questionIdParam'
+      - $ref: '#/components/parameters/propositionIdParam'
+    post:
+      summary: Answer to a question with a proposition. If an answer already exists, it updates it
+      operationId: postAnswerHandler
+      tags:
+        - authenticated
+        - questions
+        - answers
+      security:
+        - XApiKeyAuth: []
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/responses/ObjectAnswer'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+
 components:
   parameters:
     quizIdParam:
@@ -598,6 +648,17 @@ components:
         type: string
         example: 'test.user'
       style: simple
+
+    propositionIdParam:
+      name: proposition_id
+      in: path
+      description: ID of a proposition (local to a question)
+      required: true
+      schema:
+        type: integer
+        example: 1
+      style: simple
+
 
   # https://swagger.io/docs/specification/authentication/api-keys/
   securitySchemes:
@@ -904,3 +965,30 @@ components:
         proposition_id:
           type: integer
           example: 0
+
+    ObjectAnswer:
+      type: object
+      properties:
+        user_id:
+          type: string
+          example: 'test.user'
+        quiz_id:
+          type: integer
+          example: 0
+        question_id:
+          type: integer
+          example: 0
+        proposition_id:
+          type: integer
+          example: 1
+        answered_at:
+          type: string
+          example: '2020-03-20T13:26:24.139Z'
+      required:
+        - quiz_id
+        - question_id
+        - proposition_id
+        - user_id
+
+
+ 
